--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
   "devDependencies": {
     "chai": "^4.1.2",
     "mocha": "^5.0.5",
-    "nyc": "^11.6.0"
+    "nyc": "^11.6.0",
+    "sinon": "^4.4.9"
   },
   "dependencies": {}
 }
