Updated author based on Dan's comment

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "coding",
     "train"
   ],
-  "author": "Dan Shiffman",
+  "author": "Coding Train Community",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/CodingTrain/QuadTree/issues"
