--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "example": "example"
   },
   "scripts": {
-    "test": "nyc --reporter=html mocha",
+    "test": "nyc --reporter=lcov --reporter=text-summary mocha",
     "test-watch": "mocha --watch"
   },
   "repository": {
@@ -30,7 +30,7 @@
   "devDependencies": {
     "chai": "^4.1.2",
     "mocha": "^5.0.5",
-    "nyc": "^13.3.0",
+    "nyc": "^15.0.0",
     "sinon": "^4.4.9"
   },
   "dependencies": {}
